cool-parse.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | error ';'
    4           | class_list class
    5           | class_list error ';'

    6 class: CLASS TYPEID '{' optional_feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    8 optional_feature_list: %empty
    9                      | feature_list

   10 feature_list: feature ';'
   11             | error ';'
   12             | feature_list feature ';'
   13             | feature_list error ';'

   14 feature: OBJECTID formals ':' TYPEID '{' expr '}'
   15        | OBJECTID ':' TYPEID
   16        | OBJECTID ':' TYPEID ASSIGN expr

   17 formals: '(' ')'
   18        | '(' formal_list ')'

   19 formal_list: formal
   20            | formal_list ',' formal

   21 formal: OBJECTID ':' TYPEID

   22 expr: OBJECTID ASSIGN expr
   23     | expr '.' OBJECTID '(' ')'
   24     | expr '.' OBJECTID '(' expr_list ')'
   25     | expr '@' TYPEID '.' OBJECTID '(' ')'
   26     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   27     | OBJECTID '(' ')'
   28     | OBJECTID '(' expr_list ')'
   29     | IF expr THEN expr ELSE expr FI
   30     | WHILE expr LOOP expr POOL
   31     | '{' expr_block_list '}'
   32     | LET let_body
   33     | CASE expr OF case_list ESAC
   34     | NEW TYPEID
   35     | ISVOID expr
   36     | expr '+' expr
   37     | expr '-' expr
   38     | expr '*' expr
   39     | expr '/' expr
   40     | '~' expr
   41     | expr '<' expr
   42     | expr LE expr
   43     | expr '=' expr
   44     | NOT expr
   45     | '(' expr ')'
   46     | OBJECTID
   47     | INT_CONST
   48     | STR_CONST
   49     | BOOL_CONST

   50 expr_list: expr
   51          | expr_list ',' expr

   52 expr_block_list: expr ';'
   53                | error ';'
   54                | expr_block_list expr ';'
   55                | expr_block_list error ';'

   56 case_list: case
   57          | case_list case

   58 case: OBJECTID ':' TYPEID DARROW expr ';'

   59 let_body: OBJECTID ':' TYPEID IN expr
   60         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   61         | OBJECTID ':' TYPEID ',' let_body
   62         | OBJECTID ':' TYPEID ASSIGN expr ',' let_body
   63         | error ',' let_body


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 17 18 23 24 25 26 27 28 45
    ')' (41) 17 18 23 24 25 26 27 28 45
    '*' (42) 38
    '+' (43) 36
    ',' (44) 20 51 61 62 63
    '-' (45) 37
    '.' (46) 23 24 25 26
    '/' (47) 39
    ':' (58) 14 15 16 21 58 59 60 61 62
    ';' (59) 3 5 6 7 10 11 12 13 52 53 54 55 58
    '<' (60) 41
    '=' (61) 43
    '@' (64) 25 26
    '{' (123) 6 7 14 31
    '}' (125) 6 7 14 31
    '~' (126) 40
    error (256) 3 5 11 13 53 55 63
    CLASS (258) 6 7
    ELSE (259) 29
    FI (260) 29
    IF (261) 29
    IN (262) 59 60
    INHERITS (263) 7
    LET (264) 32
    LOOP (265) 30
    POOL (266) 30
    THEN (267) 29
    WHILE (268) 30
    CASE (269) 33
    ESAC (270) 33
    OF (271) 33
    DARROW (272) 58
    NEW (273) 34
    ISVOID (274) 35
    STR_CONST <symbol> (275) 48
    INT_CONST <symbol> (276) 47
    BOOL_CONST <boolean> (277) 49
    TYPEID <symbol> (278) 6 7 14 15 16 21 25 26 34 58 59 60 61 62
    OBJECTID <symbol> (279) 14 15 16 21 22 23 24 25 26 27 28 46 58 59 60 61 62
    ASSIGN (280) 16 22 60 62
    NOT (281) 44
    LE (282) 42
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3 4 5
        on right: 1 4 5
    class <class_> (48)
        on left: 6 7
        on right: 2 4
    optional_feature_list <features> (49)
        on left: 8 9
        on right: 6 7
    feature_list <features> (50)
        on left: 10 11 12 13
        on right: 9 12 13
    feature <feature> (51)
        on left: 14 15 16
        on right: 10 12
    formals <formals> (52)
        on left: 17 18
        on right: 14
    formal_list <formals> (53)
        on left: 19 20
        on right: 18 20
    formal <formal> (54)
        on left: 21
        on right: 19 20
    expr <expression> (55)
        on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
        on right: 14 16 22 23 24 25 26 29 30 33 35 36 37 38 39 40 41 42 43 44 45 50 51 52 54 58 59 60 62
    expr_list <expressions> (56)
        on left: 50 51
        on right: 24 26 28 51
    expr_block_list <expressions> (57)
        on left: 52 53 54 55
        on right: 31 54 55
    case_list <cases> (58)
        on left: 56 57
        on right: 33 57
    case <case_> (59)
        on left: 58
        on right: 56 57
    let_body <expression> (60)
        on left: 59 60 61 62 63
        on right: 32 61 62 63


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    3 class_list: error . ';'

    ';'  shift, and go to state 6


State 2

    6 class: CLASS . TYPEID '{' optional_feature_list '}' ';'
    7      | CLASS . TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    4 class_list: class_list . class
    5           | class_list . error ';'

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 10


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    3 class_list: error ';' .

    $default  reduce using rule 3 (class_list)


State 7

    6 class: CLASS TYPEID . '{' optional_feature_list '}' ';'
    7      | CLASS TYPEID . INHERITS TYPEID '{' optional_feature_list '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


State 8

    0 $accept: program $end .

    $default  accept


State 9

    5 class_list: class_list error . ';'

    ';'  shift, and go to state 13


State 10

    4 class_list: class_list class .

    $default  reduce using rule 4 (class_list)


State 11

    7 class: CLASS TYPEID INHERITS . TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 14


State 12

    6 class: CLASS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 8 (optional_feature_list)

    optional_feature_list  go to state 17
    feature_list           go to state 18
    feature                go to state 19


State 13

    5 class_list: class_list error ';' .

    $default  reduce using rule 5 (class_list)


State 14

    7 class: CLASS TYPEID INHERITS TYPEID . '{' optional_feature_list '}' ';'

    '{'  shift, and go to state 20


State 15

   11 feature_list: error . ';'

    ';'  shift, and go to state 21


State 16

   14 feature: OBJECTID . formals ':' TYPEID '{' expr '}'
   15        | OBJECTID . ':' TYPEID
   16        | OBJECTID . ':' TYPEID ASSIGN expr

    ':'  shift, and go to state 22
    '('  shift, and go to state 23

    formals  go to state 24


State 17

    6 class: CLASS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 25


State 18

    9 optional_feature_list: feature_list .
   12 feature_list: feature_list . feature ';'
   13             | feature_list . error ';'

    error     shift, and go to state 26
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 9 (optional_feature_list)

    feature  go to state 27


State 19

   10 feature_list: feature . ';'

    ';'  shift, and go to state 28


State 20

    7 class: CLASS TYPEID INHERITS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 8 (optional_feature_list)

    optional_feature_list  go to state 29
    feature_list           go to state 18
    feature                go to state 19


State 21

   11 feature_list: error ';' .

    $default  reduce using rule 11 (feature_list)


State 22

   15 feature: OBJECTID ':' . TYPEID
   16        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 30


State 23

   17 formals: '(' . ')'
   18        | '(' . formal_list ')'

    OBJECTID  shift, and go to state 31
    ')'       shift, and go to state 32

    formal_list  go to state 33
    formal       go to state 34


State 24

   14 feature: OBJECTID formals . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 35


State 25

    6 class: CLASS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 36


State 26

   13 feature_list: feature_list error . ';'

    ';'  shift, and go to state 37


State 27

   12 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 38


State 28

   10 feature_list: feature ';' .

    $default  reduce using rule 10 (feature_list)


State 29

    7 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 39


State 30

   15 feature: OBJECTID ':' TYPEID .
   16        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 40

    $default  reduce using rule 15 (feature)


State 31

   21 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 41


State 32

   17 formals: '(' ')' .

    $default  reduce using rule 17 (formals)


State 33

   18 formals: '(' formal_list . ')'
   20 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 42
    ','  shift, and go to state 43


State 34

   19 formal_list: formal .

    $default  reduce using rule 19 (formal_list)


State 35

   14 feature: OBJECTID formals ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 44


State 36

    6 class: CLASS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 6 (class)


State 37

   13 feature_list: feature_list error ';' .

    $default  reduce using rule 13 (feature_list)


State 38

   12 feature_list: feature_list feature ';' .

    $default  reduce using rule 12 (feature_list)


State 39

    7 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 45


State 40

   16 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 60


State 41

   21 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 61


State 42

   18 formals: '(' formal_list ')' .

    $default  reduce using rule 18 (formals)


State 43

   20 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 31

    formal  go to state 62


State 44

   14 feature: OBJECTID formals ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 63


State 45

    7 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 7 (class)


State 46

   29 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 64


State 47

   32 expr: LET . let_body

    error     shift, and go to state 65
    OBJECTID  shift, and go to state 66

    let_body  go to state 67


State 48

   30 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 68


State 49

   33 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 69


State 50

   34 expr: NEW . TYPEID

    TYPEID  shift, and go to state 70


State 51

   35 expr: ISVOID . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 71


State 52

   48 expr: STR_CONST .

    $default  reduce using rule 48 (expr)


State 53

   47 expr: INT_CONST .

    $default  reduce using rule 47 (expr)


State 54

   49 expr: BOOL_CONST .

    $default  reduce using rule 49 (expr)


State 55

   22 expr: OBJECTID . ASSIGN expr
   27     | OBJECTID . '(' ')'
   28     | OBJECTID . '(' expr_list ')'
   46     | OBJECTID .

    ASSIGN  shift, and go to state 72
    '('     shift, and go to state 73

    $default  reduce using rule 46 (expr)


State 56

   44 expr: NOT . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 74


State 57

   40 expr: '~' . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 75


State 58

   31 expr: '{' . expr_block_list '}'

    error       shift, and go to state 76
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr             go to state 77
    expr_block_list  go to state 78


State 59

   45 expr: '(' . expr ')'

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 79


State 60

   16 feature: OBJECTID ':' TYPEID ASSIGN expr .
   23 expr: expr . '.' OBJECTID '(' ')'
   24     | expr . '.' OBJECTID '(' expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   36     | expr . '+' expr
   37     | expr . '-' expr
   38     | expr . '*' expr
   39     | expr . '/' expr
   41     | expr . '<' expr
   42     | expr . LE expr
   43     | expr . '=' expr

    LE   shift, and go to state 80
    '<'  shift, and go to state 81
    '='  shift, and go to state 82
    '+'  shift, and go to state 83
    '-'  shift, and go to state 84
    '*'  shift, and go to state 85
    '/'  shift, and go to state 86
    '@'  shift, and go to state 87
    '.'  shift, and go to state 88

    $default  reduce using rule 16 (feature)


State 61

   21 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 21 (formal)


State 62

   20 formal_list: formal_list ',' formal .

    $default  reduce using rule 20 (formal_list)


State 63

   14 feature: OBJECTID formals ':' TYPEID '{' . expr '}'

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 89


State 64

   23 expr: expr . '.' OBJECTID '(' ')'
   24     | expr . '.' OBJECTID '(' expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   29     | IF expr . THEN expr ELSE expr FI
   36     | expr . '+' expr
   37     | expr . '-' expr
   38     | expr . '*' expr
   39     | expr . '/' expr
   41     | expr . '<' expr
   42     | expr . LE expr
   43     | expr . '=' expr

    THEN  shift, and go to state 90
    LE    shift, and go to state 80
    '<'   shift, and go to state 81
    '='   shift, and go to state 82
    '+'   shift, and go to state 83
    '-'   shift, and go to state 84
    '*'   shift, and go to state 85
    '/'   shift, and go to state 86
    '@'   shift, and go to state 87
    '.'   shift, and go to state 88


State 65

   63 let_body: error . ',' let_body

    ','  shift, and go to state 91


State 66

   59 let_body: OBJECTID . ':' TYPEID IN expr
   60         | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   61         | OBJECTID . ':' TYPEID ',' let_body
   62         | OBJECTID . ':' TYPEID ASSIGN expr ',' let_body

    ':'  shift, and go to state 92


State 67

   32 expr: LET let_body .

    $default  reduce using rule 32 (expr)


State 68

   23 expr: expr . '.' OBJECTID '(' ')'
   24     | expr . '.' OBJECTID '(' expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   30     | WHILE expr . LOOP expr POOL
   36     | expr . '+' expr
   37     | expr . '-' expr
   38     | expr . '*' expr
   39     | expr . '/' expr
   41     | expr . '<' expr
   42     | expr . LE expr
   43     | expr . '=' expr

    LOOP  shift, and go to state 93
    LE    shift, and go to state 80
    '<'   shift, and go to state 81
    '='   shift, and go to state 82
    '+'   shift, and go to state 83
    '-'   shift, and go to state 84
    '*'   shift, and go to state 85
    '/'   shift, and go to state 86
    '@'   shift, and go to state 87
    '.'   shift, and go to state 88


State 69

   23 expr: expr . '.' OBJECTID '(' ')'
   24     | expr . '.' OBJECTID '(' expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   33     | CASE expr . OF case_list ESAC
   36     | expr . '+' expr
   37     | expr . '-' expr
   38     | expr . '*' expr
   39     | expr . '/' expr
   41     | expr . '<' expr
   42     | expr . LE expr
   43     | expr . '=' expr

    OF   shift, and go to state 94
    LE   shift, and go to state 80
    '<'  shift, and go to state 81
    '='  shift, and go to state 82
    '+'  shift, and go to state 83
    '-'  shift, and go to state 84
    '*'  shift, and go to state 85
    '/'  shift, and go to state 86
    '@'  shift, and go to state 87
    '.'  shift, and go to state 88


State 70

   34 expr: NEW TYPEID .

    $default  reduce using rule 34 (expr)


State 71

   23 expr: expr . '.' OBJECTID '(' ')'
   24     | expr . '.' OBJECTID '(' expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   35     | ISVOID expr .
   36     | expr . '+' expr
   37     | expr . '-' expr
   38     | expr . '*' expr
   39     | expr . '/' expr
   41     | expr . '<' expr
   42     | expr . LE expr
   43     | expr . '=' expr

    '@'  shift, and go to state 87
    '.'  shift, and go to state 88

    $default  reduce using rule 35 (expr)


State 72

   22 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 95


State 73

   27 expr: OBJECTID '(' . ')'
   28     | OBJECTID '(' . expr_list ')'

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59
    ')'         shift, and go to state 96

    expr       go to state 97
    expr_list  go to state 98


State 74

   23 expr: expr . '.' OBJECTID '(' ')'
   24     | expr . '.' OBJECTID '(' expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   36     | expr . '+' expr
   37     | expr . '-' expr
   38     | expr . '*' expr
   39     | expr . '/' expr
   41     | expr . '<' expr
   42     | expr . LE expr
   43     | expr . '=' expr
   44     | NOT expr .

    LE   shift, and go to state 80
    '<'  shift, and go to state 81
    '='  shift, and go to state 82
    '+'  shift, and go to state 83
    '-'  shift, and go to state 84
    '*'  shift, and go to state 85
    '/'  shift, and go to state 86
    '@'  shift, and go to state 87
    '.'  shift, and go to state 88

    $default  reduce using rule 44 (expr)


State 75

   23 expr: expr . '.' OBJECTID '(' ')'
   24     | expr . '.' OBJECTID '(' expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   36     | expr . '+' expr
   37     | expr . '-' expr
   38     | expr . '*' expr
   39     | expr . '/' expr
   40     | '~' expr .
   41     | expr . '<' expr
   42     | expr . LE expr
   43     | expr . '=' expr

    '@'  shift, and go to state 87
    '.'  shift, and go to state 88

    $default  reduce using rule 40 (expr)


State 76

   53 expr_block_list: error . ';'

    ';'  shift, and go to state 99


State 77

   23 expr: expr . '.' OBJECTID '(' ')'
   24     | expr . '.' OBJECTID '(' expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   36     | expr . '+' expr
   37     | expr . '-' expr
   38     | expr . '*' expr
   39     | expr . '/' expr
   41     | expr . '<' expr
   42     | expr . LE expr
   43     | expr . '=' expr
   52 expr_block_list: expr . ';'

    LE   shift, and go to state 80
    '<'  shift, and go to state 81
    '='  shift, and go to state 82
    '+'  shift, and go to state 83
    '-'  shift, and go to state 84
    '*'  shift, and go to state 85
    '/'  shift, and go to state 86
    '@'  shift, and go to state 87
    '.'  shift, and go to state 88
    ';'  shift, and go to state 100


State 78

   31 expr: '{' expr_block_list . '}'
   54 expr_block_list: expr_block_list . expr ';'
   55                | expr_block_list . error ';'

    error       shift, and go to state 101
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '}'         shift, and go to state 102
    '('         shift, and go to state 59

    expr  go to state 103


State 79

   23 expr: expr . '.' OBJECTID '(' ')'
   24     | expr . '.' OBJECTID '(' expr_list ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   26     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   36     | expr . '+' expr
   37     | expr . '-' expr
   38     | expr . '*' expr
   39     | expr . '/' expr
   41     | expr . '<' expr
   42     | expr . LE expr
   43     | expr . '=' expr
   45     | '(' expr . ')'

    LE   shift, and go to state 80
    '<'  shift, and go to state 81
    '='  shift, and go to state 82
    '+'  shift, and go to state 83
    '-'  shift, and go to state 84
    '*'  shift, and go to state 85
    '/'  shift, and go to state 86
    '@'  shift, and go to state 87
    '.'  shift, and go to state 88
    ')'  shift, and go to state 104


State 80

   42 expr: expr LE . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 105


State 81

   41 expr: expr '<' . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 106


State 82

   43 expr: expr '=' . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 107


State 83

   36 expr: expr '+' . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 108


State 84

   37 expr: expr '-' . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 109


State 85

   38 expr: expr '*' . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 110


State 86

   39 expr: expr '/' . expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 111


State 87

   25 expr: expr '@' . TYPEID '.' OBJECTID '(' ')'
   26     | expr '@' . TYPEID '.' OBJECTID '(' expr_list ')'

    TYPEID  shift, and go to state 112


State 88

   23 expr: expr '.' . OBJECTID '(' ')'
   24     | expr '.' . OBJECTID '(' expr_list ')'

    OBJECTID  shift, and go to state 113


State 89
